@@ -36,6 +36,7 @@ import org.apache.druid.java.util.common.DateTimes;
 import org.apache.druid.java.util.common.IAE;
 import org.apache.druid.java.util.common.Intervals;
 import org.apache.druid.java.util.common.JodaUtils;
+import org.apache.druid.java.util.common.Pair;
 import org.apache.druid.java.util.common.StringUtils;
 import org.apache.druid.java.util.common.jackson.JacksonUtils;
 import org.apache.druid.java.util.common.logger.Logger;
@@ -48,11 +49,13 @@ import org.apache.druid.segment.realtime.appenderator.SegmentIdWithShardSpec;
 import org.apache.druid.server.http.DataSegmentPlus;
 import org.apache.druid.timeline.CompactionState;
 import org.apache.druid.timeline.DataSegment;
+import org.apache.druid.timeline.DatasourceInterval;
 import org.apache.druid.timeline.SegmentId;
 import org.apache.druid.timeline.SegmentTimeline;
 import org.apache.druid.utils.CloseableUtils;
 import org.joda.time.DateTime;
 import org.joda.time.Interval;
+import org.joda.time.Period;
 import org.skife.jdbi.v2.Handle;
 import org.skife.jdbi.v2.PreparedBatch;
 import org.skife.jdbi.v2.Query;
@@ -74,12 +77,13 @@ import java.util.Map;
 import java.util.NoSuchElementException;
 import java.util.Objects;
 import java.util.Set;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 /**
  * An object that is used to query the segments table in the metadata store.
- * Each instance of this class is scoped to a single {@link Handle} and is meant
- * to be short-lived.
+ * Each instance of this class is scoped to a single {@link Handle} and must
+ * be used within a single transaction only.
  */
 public class SqlSegmentsMetadataQuery
 {
@@ -95,18 +99,21 @@ public class SqlSegmentsMetadataQuery
   private final Handle handle;
   private final SQLMetadataConnector connector;
   private final MetadataStorageTablesConfig dbTables;
+  private final SegmentsMetadataManagerConfig managerConfig;
   private final ObjectMapper jsonMapper;
 
   private SqlSegmentsMetadataQuery(
       final Handle handle,
       final SQLMetadataConnector connector,
       final MetadataStorageTablesConfig dbTables,
+      final SegmentsMetadataManagerConfig managerConfig,
       final ObjectMapper jsonMapper
   )
   {
     this.handle = handle;
     this.connector = connector;
     this.dbTables = dbTables;
+    this.managerConfig = managerConfig;
     this.jsonMapper = jsonMapper;
   }
 
@@ -118,10 +125,11 @@ public class SqlSegmentsMetadataQuery
       final Handle handle,
       final SQLMetadataConnector connector,
       final MetadataStorageTablesConfig dbTables,
+      final SegmentsMetadataManagerConfig managerConfig,
       final ObjectMapper jsonMapper
   )
   {
-    return new SqlSegmentsMetadataQuery(handle, connector, dbTables, jsonMapper);
+    return new SqlSegmentsMetadataQuery(handle, connector, dbTables, managerConfig, jsonMapper);
   }
 
   /**
@@ -900,6 +908,17 @@ public class SqlSegmentsMetadataQuery
 
   public boolean markSegmentAsUsed(SegmentId segmentId, DateTime updateTime)
   {
+    final List<DataSegmentPlus> targetSegments =
+        retrieveSegmentsById(segmentId.getDataSource(), Set.of(segmentId));
+    if (targetSegments.isEmpty()) {
+      // Invalid segment ID
+      return false;
+    } else if (Boolean.TRUE.equals(targetSegments.getFirst().getUsed())) {
+      // Segment is already marked as used, avoid another DB call
+      return false;
+    }
+
+    validateSegmentsForMarkingAsUsed(targetSegments);
     return markSegments(Set.of(segmentId), true, updateTime) > 0;
   }
 
@@ -926,7 +945,6 @@ public class SqlSegmentsMetadataQuery
       DateTime updateTime
   )
   {
-    final List<DataSegment> unusedSegments = new ArrayList<>();
     final SegmentTimeline timeline = new SegmentTimeline();
 
     final List<Interval> intervals =
@@ -940,12 +958,13 @@ public class SqlSegmentsMetadataQuery
       throw new RuntimeException(e);
     }
 
-    try (final CloseableIterator<DataSegment> iterator =
-             retrieveUnusedSegments(dataSourceName, intervals, versions, null, null, null, null)) {
+    final List<DataSegmentPlus> unusedSegments = new ArrayList<>();
+    try (final CloseableIterator<DataSegmentPlus> iterator =
+             retrieveUnusedSegmentsPlus(dataSourceName, intervals, versions, null, null, null, null)) {
       while (iterator.hasNext()) {
-        final DataSegment dataSegment = iterator.next();
-        timeline.add(dataSegment);
-        unusedSegments.add(dataSegment);
+        final DataSegmentPlus segmentPlus = iterator.next();
+        timeline.add(segmentPlus.getDataSegment());
+        unusedSegments.add(segmentPlus);
       }
     }
     catch (IOException e) {
@@ -956,18 +975,18 @@ public class SqlSegmentsMetadataQuery
   }
 
   private int markNonOvershadowedSegmentsAsUsed(
-      List<DataSegment> unusedSegments,
+      List<DataSegmentPlus> unusedSegments,
       SegmentTimeline timeline,
       DateTime updateTime
   )
   {
-    Set<SegmentId> nonOvershadowedSegments =
+    final Map<SegmentId, DataSegmentPlus> nonOvershadowedSegments =
         unusedSegments.stream()
-                      .filter(segment -> !timeline.isOvershadowed(segment))
-                      .map(DataSegment::getId)
-                      .collect(Collectors.toSet());
+                      .filter(segment -> !timeline.isOvershadowed(segment.getDataSegment()))
+                      .collect(Collectors.toMap(segment -> segment.getDataSegment().getId(), Function.identity()));
 
-    return markSegmentsAsUsed(nonOvershadowedSegments, updateTime);
+    validateSegmentsForMarkingAsUsed(nonOvershadowedSegments.values());
+    return markSegmentsAsUsed(nonOvershadowedSegments.keySet(), updateTime);
   }
 
   public int markNonOvershadowedSegmentsAsUsed(
@@ -976,13 +995,15 @@ public class SqlSegmentsMetadataQuery
       final DateTime updateTime
   )
   {
-    final List<DataSegment> unusedSegments = retrieveUnusedSegments(dataSource, segmentIds);
+    final List<DataSegmentPlus> unusedSegments = retrieveUnusedSegmentsPlus(dataSource, segmentIds);
     final List<Interval> unusedSegmentsIntervals = JodaUtils.condenseIntervals(
-        unusedSegments.stream().map(DataSegment::getInterval).collect(Collectors.toList())
+        unusedSegments.stream().map(s -> s.getDataSegment().getInterval()).toList()
     );
 
     // Create a timeline with all used and unused segments in this interval
-    final SegmentTimeline timeline = SegmentTimeline.forSegments(unusedSegments);
+    final SegmentTimeline timeline = SegmentTimeline.forSegments(
+        unusedSegments.stream().map(DataSegmentPlus::getDataSegment).toList()
+    );
 
     try (CloseableIterator<DataSegment> usedSegmentsOverlappingUnusedSegmentsIntervals =
              retrieveUsedSegments(dataSource, unusedSegmentsIntervals)) {
@@ -995,7 +1016,44 @@ public class SqlSegmentsMetadataQuery
     return markNonOvershadowedSegmentsAsUsed(unusedSegments, timeline, updateTime);
   }
 
-  private List<DataSegment> retrieveUnusedSegments(
+  /**
+   * Checks that all the segments were last updated within the kill buffer period.
+   * If any segment was updated earlier than that, an exception is thrown so that
+   * none of the segments are updated to ensure atomicity.
+   */
+  private void validateSegmentsForMarkingAsUsed(Collection<DataSegmentPlus> segments)
+  {
+    if (!managerConfig.getKillUnused().isEnabled()) {
+      // Do not verify the buffer period if embedded kill tasks are not enabled
+      return;
+    }
+
+    final Period bufferPeriod = managerConfig.getKillUnused().getBufferPeriod();
+    final DateTime minAllowedUpdateTime = DateTimes.nowUtc().minus(
+        managerConfig.getKillUnused().getBufferPeriod()
+    );
+
+    final List<SegmentId> expiredSegmentIds = segments.stream().filter(
+        s -> s.getUsedStatusLastUpdatedDate() != null
+             && !s.getUsedStatusLastUpdatedDate().isAfter(minAllowedUpdateTime)
+    ).map(s -> s.getDataSegment().getId()).toList();
+
+    if (!expiredSegmentIds.isEmpty()) {
+      throw DruidException.forPersona(DruidException.Persona.OPERATOR)
+                          .ofCategory(DruidException.Category.CONFLICT)
+                          .build(
+                              "Segment IDs[%s] cannot be marked as used since"
+                              + " they were last updated more than [%s] ago and"
+                              + " are now eligible for permanent deletion."
+                              + " Increase the value of runtime property"
+                              + " ['druid.manager.segments.killUnused.bufferPeriod']"
+                              + " to allow updating these segment IDs.",
+                              expiredSegmentIds, bufferPeriod
+                          );
+    }
+  }
+
+  private List<DataSegmentPlus> retrieveUnusedSegmentsPlus(
       final String dataSource,
       final Set<SegmentId> segmentIds
   )
@@ -1003,12 +1061,11 @@ public class SqlSegmentsMetadataQuery
     final List<DataSegmentPlus> retrievedSegments = retrieveSegmentsById(dataSource, segmentIds);
 
     final Set<SegmentId> unknownSegmentIds = new HashSet<>(segmentIds);
-    final List<DataSegment> unusedSegments = new ArrayList<>();
+    final List<DataSegmentPlus> unusedSegments = new ArrayList<>();
     for (DataSegmentPlus entry : retrievedSegments) {
-      final DataSegment segment = entry.getDataSegment();
-      unknownSegmentIds.remove(segment.getId());
+      unknownSegmentIds.remove(entry.getDataSegment().getId());
       if (Boolean.FALSE.equals(entry.getUsed())) {
-        unusedSegments.add(segment);
+        unusedSegments.add(entry);
       }
     }
 
@@ -1065,20 +1122,43 @@ public class SqlSegmentsMetadataQuery
   }
 
   /**
-   * Gets unused segment intervals for the specified datasource. There is no
-   * guarantee on the order of intervals in the list or on whether the limited
-   * list contains the earliest or latest intervals present in the datasource.
+   * Retrieves intervals containing unused segments for the specified datasource.
+   * <p>
+   * This method ensures that if there is any unused segment for the datasource,
+   * the returned list is not empty. However, it does NOT guarantee that:
+   * <ul>
+   * <li>the intervals in the result would be ordered</li>
+   * <li>the result would contain the earliest or latest intervals for this datasource</li>
+   * <li>it would scan all unused segments for this datasource. So, the result
+   * may contain less than {@code limit} entries even when there are more distinct
+   * unused segment intervals in the metadata store for this datasource.</li>
+   * </ul>
    *
-   * @return List of unused segment intervals containing upto {@code limit} entries.
+   * @return List of distinct unused segment intervals for the specified datasource
+   * containing at least 1 entry if there is any unused segment for the datasource,
+   * up to a maximum of {@code limit} entries.
    */
-  public List<Interval> retrieveUnusedSegmentIntervals(String dataSource, int limit)
+  public List<Interval> retrieveSomeUnusedSegmentIntervals(String dataSource, int limit)
   {
     final String sql = StringUtils.format(
-        "SELECT start, %2$send%2$s FROM %1$s"
-        + " WHERE dataSource = :dataSource AND used = false"
-        + " GROUP BY start, %2$send%2$s"
-        + "  %3$s",
-        dbTables.getSegmentsTable(), connector.getQuoteString(), connector.limitClause(limit)
+        // Disable checkstyle to avoid argumentLineBreaking rule from getting triggered
+        //CHECKSTYLE.OFF: Regexp
+        """
+            SELECT start, %2$send%2$s
+            FROM (
+              SELECT start, %2$send%2$s
+              FROM %1$s
+              WHERE dataSource = :dataSource AND used = false
+              %3$s
+            ) AS unused
+            GROUP BY %2$send%2$s, start
+            %4$s
+            """,
+        //CHECKSTYLE.ON: Regexp
+        dbTables.getSegmentsTable(),
+        connector.getQuoteString(),
+        connector.limitClause(1_000_000), // limit unused segment rows scanned to 1M
+        connector.limitClause(limit)
     );
 
     final List<Interval> intervals = connector.inReadOnlyTransaction(
@@ -1094,6 +1174,70 @@ public class SqlSegmentsMetadataQuery
   }
 
   /**
+   * Scans up to {@code maxSegmentsToScan} unused segments which are eligible for
+   * kill and returns the unique datasource-interval for the segments scanned.
+   * <p>
+   * This method ensures that if there is any unused segment in any datasource
+   * which was updated earlier than {@code maxUpdatedTime}, then the returned
+   * map is not empty. However, it does NOT guarantee that:
+   * <ul>
+   * <li>the candidates in the returned map would be ordered by datasource or interval</li>
+   * <li>the result would contain {@code maxResultSize} entries when there are more distinct
+   * intervals with eligible unused segments in the metadata store.</li>
+   * </ul>
+   *
+   * @param maxUpdatedTime    Unused segments are considered eligible for kill
+   *                          if they were last updated before this time.
+   * @param maxResultSize     Maximum number of candidate intervals to return
+   *                          across all datasources.
+   * @param maxSegmentsToScan Maximum number of eligible unused segments to scan
+   *                          in the metadata store.
+   * @return Map from {@link DatasourceInterval} to the number of unused segments
+   * eligible for kill.
+   */
+  public Map<DatasourceInterval, Integer> retrieveSomeUnusedSegmentIntervals(
+      DateTime maxUpdatedTime,
+      int maxResultSize,
+      int maxSegmentsToScan
+  )
+  {
+    final String sql = StringUtils.format(
+        // Disable checkstyle to avoid argumentLineBreaking rule from getting triggered
+        //CHECKSTYLE.OFF: Regexp
+        """
+            SELECT dataSource, start, %2$send%2$s, COUNT(*) AS totalCount
+            FROM (
+              SELECT dataSource, start, %2$send%2$s
+              FROM %1$s
+              WHERE used = false
+              AND (used_status_last_updated IS NULL OR used_status_last_updated <= :maxUpdatedTime)
+              %3$s
+            ) AS unused
+            GROUP BY dataSource, %2$send%2$s, start
+            %4$s
+            """,
+        //CHECKSTYLE.ON: Regexp
+        dbTables.getSegmentsTable(),
+        connector.getQuoteString(),
+        connector.limitClause(maxSegmentsToScan),
+        connector.limitClause(maxResultSize)
+    );
+
+    final List<Pair<DatasourceInterval, Integer>> unusedSegmentIntervals = connector.inReadOnlyTransaction(
+        (handle, status) ->
+            handle.createQuery(sql)
+                  .setFetchSize(connector.getStreamingFetchSize())
+                  .bind("maxUpdatedTime", maxUpdatedTime.toString())
+                  .map((index, r, ctx) -> mapToUnusedSegmentInterval(r))
+                  .list()
+    );
+
+    return unusedSegmentIntervals.stream().filter(Objects::nonNull).collect(
+        Collectors.toMap(pair -> pair.lhs, pair -> pair.rhs)
+    );
+  }
+
+  /**
    * Retrieves unused segments that exactly match the given interval.
    *
    * @param interval       Returned segments must exactly match this interval.
@@ -1101,7 +1245,7 @@ public class SqlSegmentsMetadataQuery
    *                       which is either null or earlier than this value.
    * @param limit          Maximum number of segments to return
    */
-  public List<DataSegment> retrieveUnusedSegmentsWithExactInterval(
+  public List<DataSegmentPlus> retrieveUnusedSegmentsWithExactInterval(
       String dataSource,
       Interval interval,
       DateTime maxUpdatedTime,
@@ -1109,7 +1253,7 @@ public class SqlSegmentsMetadataQuery
   )
   {
     final String sql = StringUtils.format(
-        "SELECT id, payload FROM %1$s"
+        "SELECT id, payload, upgraded_from_segment_id FROM %1$s"
         + " WHERE dataSource = :dataSource AND used = false"
         + " AND %2$send%2$s = :end AND start = :start"
         + " AND (used_status_last_updated IS NULL OR used_status_last_updated <= :maxUpdatedTime)"
@@ -1117,7 +1261,7 @@ public class SqlSegmentsMetadataQuery
         dbTables.getSegmentsTable(), connector.getQuoteString(), connector.limitClause(limit)
     );
 
-    final List<DataSegment> segments = connector.inReadOnlyTransaction(
+    final List<DataSegmentPlus> segments = connector.inReadOnlyTransaction(
         (handle, status) ->
             handle.createQuery(sql)
                   .setFetchSize(connector.getStreamingFetchSize())
@@ -1125,7 +1269,7 @@ public class SqlSegmentsMetadataQuery
                   .bind("start", interval.getStart().toString())
                   .bind("end", interval.getEnd().toString())
                   .bind("maxUpdatedTime", maxUpdatedTime.toString())
-                  .map((index, r, ctx) -> mapToSegment(r))
+                  .map((index, r, ctx) -> mapToSegmentPlusUpgradedId(r))
                   .list()
     );
 
@@ -1485,7 +1629,9 @@ public class SqlSegmentsMetadataQuery
       @Nullable final DateTime maxUsedStatusLastUpdatedTime
   )
   {
-    if (intervals.isEmpty() || intervals.size() <= MAX_INTERVALS_PER_BATCH) {
+    if (versions != null && versions.isEmpty()) {
+      return CloseableIterators.withEmptyBaggage(Collections.emptyIterator());
+    } else if (intervals.isEmpty() || intervals.size() <= MAX_INTERVALS_PER_BATCH) {
       return CloseableIterators.withEmptyBaggage(
           retrieveSegmentsPlusInIntervalsBatch(dataSource, intervals, versions, matchMode, used, limit, lastSegmentId, sortOrder, maxUsedStatusLastUpdatedTime)
       );
@@ -1668,6 +1814,9 @@ public class SqlSegmentsMetadataQuery
     return sql;
   }
 
+  /**
+   * Reads the fields {@code start} and {@code end} from the given result set.
+   */
   @Nullable
   private Interval mapToInterval(ResultSet resultSet, String dataSource)
   {
@@ -1679,6 +1828,30 @@ public class SqlSegmentsMetadataQuery
     }
     catch (Throwable t) {
       log.error(t, "Could not read an interval of datasource[%s]", dataSource);
+      return null;
+    }
+  }
+
+  /**
+   * Reads the fields {@code dataSource}, {@code start}, {@code end} and
+   * {@code totalCount} from the given result set.
+   */
+  @Nullable
+  private Pair<DatasourceInterval, Integer> mapToUnusedSegmentInterval(ResultSet resultSet)
+  {
+    try {
+      final String dataSource = resultSet.getString("dataSource");
+      final int totalCount = resultSet.getInt("totalCount");
+
+      final Interval interval = mapToInterval(resultSet, "");
+      if (interval == null) {
+        return null;
+      } else {
+        return Pair.of(new DatasourceInterval(dataSource, interval), totalCount);
+      }
+    }
+    catch (Throwable t) {
+      log.error(t, "Could not read unused segment interval record");
       return null;
     }
   }
@@ -1855,13 +2028,27 @@ public class SqlSegmentsMetadataQuery
     }).iterator();
   }
 
+  /**
+   * Maps the given result set to a {@link DataSegmentPlus} with the segment
+   * payload and the {@code upgradedFromSegmentId} populated (if non-null).
+   */
   @Nullable
-  private DataSegment mapToSegment(ResultSet resultSet)
+  private DataSegmentPlus mapToSegmentPlusUpgradedId(ResultSet resultSet)
   {
     String segmentId = "";
     try {
       segmentId = resultSet.getString("id");
-      return JacksonUtils.readValue(jsonMapper, resultSet.getBytes("payload"), DataSegment.class);
+      final String upgradedFromSegmentId = resultSet.getString("upgraded_from_segment_id");
+      return new DataSegmentPlus(
+          JacksonUtils.readValue(jsonMapper, resultSet.getBytes("payload"), DataSegment.class),
+          null,
+          null,
+          null,
+          null,
+          null,
+          upgradedFromSegmentId,
+          null
+      );
     }
     catch (Throwable t) {
       log.error(t, "Could not read segment with ID[%s]", segmentId);
